# hw04-hw04-group18

./: .buildinfo  LOSC_Event_tutorial.html  LOSC_Event_tutorial.ipynb.html  Makefile  README.html  _config.yml  _toc.yml  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  intro.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: LOSC_Event_tutorial.doctree  LOSC_Event_tutorial.ipynb.doctree  intro.doctree
.doctrees/ligobook/: intro.doctree  markdown-notebooks.doctree
_build/html/: LOSC_Event_tutorial.ipynb.html  README.html  contribution_statement.html  genindex.html  markdown-notebooks.html  markdown.html  notebooks.html  searchindex.js
_build/html/.doctrees/: README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/.doctrees/ligobook/: markdown.doctree  notebooks.doctree
_build/html/ligobook/: intro.html  markdown.html  notebooks.html
_build/jupyter_execute/: LOSC_Event_tutorial.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
_build/jupyter_execute/ligobook/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: LOSC_Event_tutorial.ipynb  LOSC_Event_tutorial.ipynb.rst  README.md  contribution_statement.md
ligobook/: markdown-notebooks.html
ligotools/: utils.py
ligotools/tests/: tests_readligo.py  tests_utils.py
