# Declarative configuration for setup.py

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = "Ligo Scientific Collaboration (LSC), Peiying Guan, Yingyi Huang, Ye Joon Han, Michelle Fong" 
author_email     = etett08042@berkeley.edu, yingyib4e@berkeley.edu, berkeleyj99@berkeley.edu, mfong23@berkeley.edu
description      = A Python library to make ligotools
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:

python_requires  = >= 3.8,
install_requires =
  numpy=1.23
  h5py=3.7
  matplotlib=3.5
  ipython=8.2
  ipykernel=5.5
  decorator=5.1
  scipy=1.8


[options.packages.find]
exclude =
    examples*
    docs*
